Fix image selection on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,12 @@ body {
     overscroll-behavior-x: none;
 }
 
+img {
+    -webkit-user-drag: none;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
 /* touch event none to prevent scroll glitches on mobile */
 @media screen and (max-width: 1024px) {
 
